# actix-redis-minimal-actor-example

./: Cargo.toml  README.md
src/: main.rs
